--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -12,55 +12,85 @@ body {
 .inner {
   float: left;
   display: inline-block;
-  width: 484px;
+  width: 442px;
   height: 672px;
 }
 .jleft {
-  margin-right: -42px;
-  width: 484px;
-  height: 672px;
   background: url("../images/left.png");
 }
 .jright {
-  margin-left: -42px;
   background: url("../images/right.png");
 }
 form {
-  margin: 60px 0 0 -40px;
-  padding: 20px;
+  width: 390px;
+  padding: 80px 20px 20px 20px;
 }
-input {
-  width: 300px !important;
-  color: white;
+.input-field input, .select-wrapper input {
+  color: #ffffff !important;
 }
-.input-field {
-  padding: 10px !important;
-  display: inline !important;
-}
-button {
-  width: 315px;
+#register {
+  width: 100%;
   background: #392c34 !important;
 }
-/* label color */
- .input-field label {
-   color: #392c34 !important;
-   text-shadow: -1px 0 rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 1px 0 rgba(0, 0, 0, 0.2), 0 -1px rgba(0, 0, 0, 0.2);
-   font-size: 20px;
- }
- .input-field input[type=text] {
-   border-bottom: 1px solid #392c34 !important;
-   box-shadow: 0 1px 0 0 #392c34 !important;
- }
- /* label focus color */
- .input-field input[type=text]:focus + label {
-   color: #6b0742 !important;
- }
- /* label underline focus color */
- .input-field input[type=text]:focus {
-   border-bottom: 1px solid #6b0742 !important;
-   box-shadow: 0 1px 0 0 #6b0742 !important;
- }
-
+.caret {
+  display: none;
+}
+.dropdown-content {
+  top: 0 !important;
+}
+.select-wrapper li {
+  background: #b5a795 !important;
+}
+.select-wrapper li span {
+  color: #ffffff !important;
+}
+.select-wrapper .disabled {
+  background: #897d6e !important;
+}
+.select-wrapper .selected {
+  background: #d6c7b3 !important;
+}
+.datepicker-date-display {
+  background: #392c34;
+}
+.datepicker-container button {
+  color: #392c34;
+}
+.datepicker-container button:focus {
+  background: none;
+}
+.datepicker-container .is-selected {
+  background: #7a5f70 !important;
+}
+.dropdown-content li > a, .dropdown-content li > span  {
+  color: #392c34 !important;
+}
+.datepicker-container input {
+  color: #392c34 !important;
+}
+label {
+ color: #392c34 !important;
+ text-shadow: -1px 0 rgba(0, 0, 0, 0.2), 0 1px rgba(0, 0, 0, 0.2), 1px 0 rgba(0, 0, 0, 0.2), 0 -1px rgba(0, 0, 0, 0.2);
+ font-size: 20px;
+}
+.input-field input[type=text] {
+ border-bottom: 1px solid #392c34 !important;
+ box-shadow: 0 1px 0 0 #392c34 !important;
+}
+.input-field input[type=text]:focus + label {
+ color: #6b0742 !important;
+}
+.input-field input[type=text]:focus {
+ border-bottom: 1px solid #6b0742 !important;
+ box-shadow: 0 1px 0 0 #6b0742 !important;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
 @media only screen and (max-width: 1250px) {
   .container {
     width: 100% !important;
